@@ -888,6 +888,22 @@ name|org
 operator|.
 name|apache
 operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|stats
+operator|.
+name|MetricUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|zookeeper
 operator|.
 name|KeeperException
@@ -2719,6 +2735,40 @@ operator|new
 name|SolrMetricManager
 argument_list|()
 expr_stmt|;
+name|coreContainerWorkExecutor
+operator|=
+name|MetricUtils
+operator|.
+name|instrumentedExecutorService
+argument_list|(
+name|coreContainerWorkExecutor
+argument_list|,
+name|metricManager
+operator|.
+name|registry
+argument_list|(
+name|SolrMetricManager
+operator|.
+name|getRegistryName
+argument_list|(
+name|SolrInfoMBean
+operator|.
+name|Group
+operator|.
+name|node
+argument_list|)
+argument_list|)
+argument_list|,
+name|SolrMetricManager
+operator|.
+name|mkName
+argument_list|(
+literal|"coreContainerWorkExecutor"
+argument_list|,
+literal|"threadPool"
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|shardHandlerFactory
 operator|=
 name|ShardHandlerFactory
@@ -3296,6 +3346,10 @@ comment|// setup executor to load cores in parallel
 name|ExecutorService
 name|coreLoadExecutor
 init|=
+name|MetricUtils
+operator|.
+name|instrumentedExecutorService
+argument_list|(
 name|ExecutorUtil
 operator|.
 name|newMDCAwareFixedThreadPool
@@ -3312,6 +3366,32 @@ operator|new
 name|DefaultSolrThreadFactory
 argument_list|(
 literal|"coreLoadExecutor"
+argument_list|)
+argument_list|)
+argument_list|,
+name|metricManager
+operator|.
+name|registry
+argument_list|(
+name|SolrMetricManager
+operator|.
+name|getRegistryName
+argument_list|(
+name|SolrInfoMBean
+operator|.
+name|Group
+operator|.
+name|node
+argument_list|)
+argument_list|)
+argument_list|,
+name|SolrMetricManager
+operator|.
+name|mkName
+argument_list|(
+literal|"coreLoadExecutor"
+argument_list|,
+literal|"threadPool"
 argument_list|)
 argument_list|)
 decl_stmt|;
