@@ -46,6 +46,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Collections
 import|;
 end_import
@@ -360,6 +370,20 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|metrics
+operator|.
+name|SolrMetricManager
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|request
 operator|.
 name|SolrQueryRequest
@@ -419,6 +443,22 @@ operator|.
 name|util
 operator|.
 name|DefaultSolrThreadFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|stats
+operator|.
+name|MetricUtils
 import|;
 end_import
 
@@ -584,7 +624,6 @@ name|requestStatusMap
 decl_stmt|;
 DECL|field|parallelExecutor
 specifier|protected
-specifier|final
 name|ExecutorService
 name|parallelExecutor
 init|=
@@ -906,6 +945,80 @@ operator|+
 literal|"it is a special Handler configured directly by the RequestDispatcher"
 argument_list|)
 throw|;
+block|}
+annotation|@
+name|Override
+DECL|method|initializeMetrics
+specifier|public
+name|Collection
+argument_list|<
+name|String
+argument_list|>
+name|initializeMetrics
+parameter_list|(
+name|SolrMetricManager
+name|manager
+parameter_list|,
+name|String
+name|registryName
+parameter_list|,
+name|String
+name|scope
+parameter_list|)
+block|{
+name|Collection
+argument_list|<
+name|String
+argument_list|>
+name|metrics
+init|=
+name|super
+operator|.
+name|initializeMetrics
+argument_list|(
+name|manager
+argument_list|,
+name|registryName
+argument_list|,
+name|scope
+argument_list|)
+decl_stmt|;
+name|parallelExecutor
+operator|=
+name|MetricUtils
+operator|.
+name|instrumentedExecutorService
+argument_list|(
+name|parallelExecutor
+argument_list|,
+name|manager
+operator|.
+name|registry
+argument_list|(
+name|registryName
+argument_list|)
+argument_list|,
+name|SolrMetricManager
+operator|.
+name|mkName
+argument_list|(
+literal|"parallelCoreAdminExecutor"
+argument_list|,
+name|getCategory
+argument_list|()
+operator|.
+name|name
+argument_list|()
+argument_list|,
+name|scope
+argument_list|,
+literal|"threadPool"
+argument_list|)
+argument_list|)
+expr_stmt|;
+return|return
+name|metrics
+return|;
 block|}
 comment|/**    * The instance of CoreContainer this handler handles. This should be the CoreContainer instance that created this    * handler.    *    * @return a CoreContainer instance    */
 DECL|method|getCoreContainer
