@@ -82,6 +82,18 @@ end_import
 
 begin_import
 import|import
+name|com
+operator|.
+name|codahale
+operator|.
+name|metrics
+operator|.
+name|InstrumentedExecutorService
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -659,6 +671,58 @@ name|scope
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|updateExecutor
+operator|=
+operator|new
+name|InstrumentedExecutorService
+argument_list|(
+name|updateExecutor
+argument_list|,
+name|manager
+operator|.
+name|registry
+argument_list|(
+name|registry
+argument_list|)
+argument_list|,
+name|SolrMetricManager
+operator|.
+name|mkName
+argument_list|(
+literal|"updateExecutor"
+argument_list|,
+name|scope
+argument_list|,
+literal|"threadPool"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|recoveryExecutor
+operator|=
+operator|new
+name|InstrumentedExecutorService
+argument_list|(
+name|recoveryExecutor
+argument_list|,
+name|manager
+operator|.
+name|registry
+argument_list|(
+name|registry
+argument_list|)
+argument_list|,
+name|SolrMetricManager
+operator|.
+name|mkName
+argument_list|(
+literal|"recoveryExecutor"
+argument_list|,
+name|scope
+argument_list|,
+literal|"threadPool"
+argument_list|)
+argument_list|)
+expr_stmt|;
 return|return
 name|metricNames
 return|;
@@ -672,7 +736,7 @@ name|getDescription
 parameter_list|()
 block|{
 return|return
-literal|"Metrics tracked by UpdateShardHandler for "
+literal|"Metrics tracked by UpdateShardHandler related to distributed updates and recovery"
 return|;
 block|}
 annotation|@
