@@ -56,6 +56,18 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|ExecutorService
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|TimeUnit
 import|;
 end_import
@@ -93,6 +105,18 @@ operator|.
 name|metrics
 operator|.
 name|Histogram
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|codahale
+operator|.
+name|metrics
+operator|.
+name|InstrumentedExecutorService
 import|;
 end_import
 
@@ -957,6 +981,41 @@ argument_list|)
 expr_stmt|;
 return|return
 name|response
+return|;
+block|}
+end_function
+
+begin_comment
+comment|/**    * Returns an instrumented wrapper over the given executor service.    */
+end_comment
+
+begin_function
+DECL|method|instrumentedExecutorService
+specifier|public
+specifier|static
+name|ExecutorService
+name|instrumentedExecutorService
+parameter_list|(
+name|ExecutorService
+name|delegate
+parameter_list|,
+name|MetricRegistry
+name|metricRegistry
+parameter_list|,
+name|String
+name|scope
+parameter_list|)
+block|{
+return|return
+operator|new
+name|InstrumentedExecutorService
+argument_list|(
+name|delegate
+argument_list|,
+name|metricRegistry
+argument_list|,
+name|scope
+argument_list|)
 return|;
 block|}
 end_function
